# kserve_demo

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_push_docker.yaml  continuous_integration.yaml  pytest.yaml
custom_predictor/: Dockerfile  custom_predictor.py  dummy_model.py  requirements.txt
custom_predictor/deployment/: custom_predictor.yaml
notebooks/: demo.ipynb
notebooks/src/: data_models.py
test/: conftest.py
test/integration/: docker-compose.yaml  test_predictor.py
test/unit/: example_test.py
