[tool.poetry]
name = "kserve-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kserve = "^0.12.0"
requests = "^2.31.0"
torch = "^2.2.1"
pillow = "^10.2.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
